# google_moogle

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
googletrans/: __init__.py
workflow/: Google Moogle workflow.json
